<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="90dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:background="@drawable/rounded_album_cover"
                android:clipToOutline="true"
                android:outlineProvider="background">

                <ImageView
                    android:id="@+id/imgAlbumCover"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    app:layout_constraintDimensionRatio="1:1"
                    android:scaleType="centerCrop"
                    android:contentDescription="Portada del álbum"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="0dp"
                    android:background="#66000000"
                    android:orientation="vertical"
                    android:padding="12dp"
                    app:layout_constraintBottom_toBottomOf="@id/imgAlbumCover"
                    app:layout_constraintStart_toStartOf="@id/imgAlbumCover"
                    app:layout_constraintEnd_toEndOf="@id/imgAlbumCover">

                    <TextView
                        android:id="@+id/txtTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Nombre del álbum"
                        android:textColor="@android:color/white"
                        android:textSize="22sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txtSubtitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Género • Sello"
                        android:textColor="@android:color/white"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/txtReleaseDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Lanzado en 1984"
                        android:textColor="@android:color/white"
                        android:textSize="14sp" />
                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>


            <!-- Detalle del álbum -->
            <!-- Caja de canciones -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:background="@drawable/vinyls_card_bg"
                android:orientation="vertical"
                android:padding="12dp">

                <!-- Descripción -->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="6dp"
                    android:text="Descripción"
                    android:textColor="@color/text_primary"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="16dp"
                    android:text="Descripción del álbum"
                    android:textColor="@color/text_secondary"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:background="@drawable/vinyls_card_bg"
                android:orientation="vertical"
                android:padding="12dp">

                <!-- Título de la caja -->

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="6dp"
                    android:text="Canciones"
                    android:textColor="@color/text_primary"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <!-- Lista de canciones -->
                <LinearLayout
                    android:id="@+id/tracksContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:dividerPadding="4dp"
                    android:orientation="vertical" />
            </LinearLayout>

            <!-- Sección de comentarios -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:background="@drawable/vinyls_card_bg"
                android:orientation="vertical"
                android:padding="12dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="4dp"
                    android:text="Comentarios"
                    android:textColor="@color/text_primary"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtComments"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="16dp"
                    android:text="Lista de comentarios"
                    android:textColor="@color/text_secondary"
                    android:textSize="14sp" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <include
        android:id="@+id/includeFabDetail"
        layout="@layout/layout_fab_add"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="12dp"/>

</FrameLayout>
